# html-rewriter-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  html_rewriter.js.patch  package-lock.json  package.json  tsconfig.json
.github/workflows/: test.yml
src/: asyncify.js  comment.rs  doctype.rs  element.rs  end_tag.rs  handlers.rs  html_rewriter.d.ts  html_rewriter.rs  lib.rs
test/: comments.spec.ts  doctype.spec.ts  document_end.spec.ts  element.spec.ts  index.ts  misc.spec.ts  selectors.spec.ts  text_chunk.spec.ts
